--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "vite && npm run watch-routes",
+    "build": "npm run generate-routes && tsc && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-routes": "tsr generate",
+    "watch-routes": "tsr watch"
   },
   "dependencies": {
+    "@tanstack/react-router": "^1.63.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@tanstack/router-cli": "^1.63.5",
     "@tanstack/router-devtools": "^1.63.5",
     "@tanstack/router-plugin": "^1.63.5",
     "@types/react": "^18.3.5",
