--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite && npm run watch-routes",
+    "dev": "vite",
     "build": "npm run generate-routes && tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -12,7 +12,7 @@
     "watch-routes": "tsr watch"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.63.5",
+    "@tanstack/react-router": "^1.74.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -20,7 +20,7 @@
     "@eslint/js": "^9.8.0",
     "@tanstack/router-cli": "^1.63.5",
     "@tanstack/router-devtools": "^1.63.5",
-    "@tanstack/router-plugin": "^1.63.5",
+    "@tanstack/router-plugin": "^1.74.2",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -33,6 +33,6 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.5.4",
-    "vite": "^5.4.0"
+    "vite": "^5.4.9"
   }
 }
