--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tanstack/router-cli": "^1.63.5",
     "@tanstack/router-devtools": "^1.63.5",
     "@tanstack/router-plugin": "^1.74.2",
+    "@types/node": "^22.8.4",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
