--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
     "watch-routes": "tsr watch"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.1",
     "@tanstack/react-router": "^1.74.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
