--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-router": "^1.74.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
