--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@supabase/supabase-js": "^2.52.0",
     "@tanstack/react-router": "^1.74.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
