--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.5.4",
+    "typescript-eslint": "^8.38.0",
     "vite": "^5.4.9"
   }
 }
